[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
mongodb = { version = "2.1", features = ["zstd-compression", "snappy-compression", "zlib-compression"]}
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
uuid = "1.7.0"
